--- a/annotate/frontend/package.json
+++ b/annotate/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-image-annotation": "^0.9.9",
     "react-scripts": "2.1.5"
   },
   "scripts": {
